Updated Blokee activity in the Robot

--- a/BlokeeActivity/Blokee.Activities/Blokee.Activities/Blokee.Activities.nuspec
+++ b/BlokeeActivity/Blokee.Activities/Blokee.Activities/Blokee.Activities.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Blokee.Activities</id>
-    <version>0.0.2</version>
+    <version>$version$</version>
     <title>$title$</title>
     <authors>Alex</authors>
 	<owners>$author$</owners>
