--- a/BlokeeAutomation/project.json
+++ b/BlokeeAutomation/project.json
@@ -3,9 +3,8 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "Blokee.Activities": "[1.0.8107.39961]",
+    "Blokee.Activities": "[1.1.8108.31320]",
     "UiPath.Excel.Activities": "[2.10.4]",
-    "UiPath.Mail.Activities": "[1.10.5]",
     "UiPath.System.Activities": "[21.4.1]",
     "UiPath.UIAutomation.Activities": "[21.4.4]",
     "UiPath.WebAPI.Activities": "[1.9.2]"
@@ -17,7 +16,9 @@
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
+    "netFrameworkLazyLoading": false,
     "isPausable": true,
+    "isAttended": false,
     "requiresUserInteraction": true,
     "supportsPersistence": false,
     "excludedLoggedData": [
@@ -26,7 +27,8 @@
     ],
     "executionType": "Workflow",
     "readyForPiP": false,
-    "startsInPiP": false
+    "startsInPiP": false,
+    "mustRestoreAllDependencies": false
   },
   "designOptions": {
     "projectProfile": "Developement",
